// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`h1 component basic H1 with color "primary", emphasis "medium" 1`] = `
<Text
  color="primary"
  emphasis="medium"
  numberOfLines={0}
  size="xxl"
  style={
    Array [
      Object {
        "color": "#91b086",
        "fontFamily": "BwModelica-Bold",
        "fontSize": 28,
        "opacity": 0.6,
        "textAlign": "center",
      },
    ]
  }
  testID="H1"
  weight="bold"
>
  Some text
</Text>
`;

exports[`h1 component basic H1 with color "text", emphasis "high" and testID "H1" 1`] = `
<Text
  numberOfLines={0}
  size="xxl"
  style={
    Array [
      Object {
        "color": "#283238",
        "fontFamily": "BwModelica-Bold",
        "fontSize": 28,
        "opacity": 0.87,
        "textAlign": "center",
      },
    ]
  }
  testID="H1"
  weight="bold"
>
  Some text
</Text>
`;

exports[`h1 component basic with custom testId 1`] = `
<Text
  numberOfLines={0}
  size="xxl"
  style={
    Array [
      Object {
        "color": "#283238",
        "fontFamily": "BwModelica-Bold",
        "fontSize": 28,
        "opacity": 0.87,
        "textAlign": "center",
      },
    ]
  }
  testID="custom testID"
  weight="bold"
>
  Some text
</Text>
`;
